Fixed alignment for point history, added email
fixed little issue with point history, added email for website issues to driver pages

--- a/Javascript-Code/react-client/src/pages/PointHistory.css
+++ b/Javascript-Code/react-client/src/pages/PointHistory.css
@@ -2,17 +2,35 @@
     font-size: 18px;
     background-color: #ffffff;
     border: 1px solid;
-    width:150px;
-    height:30px;
-    z-index: 2;
-    margin-top: 100px;
-    margin-left: 20px;   
 }
 
 .PointDisplay {
+    display:flexbox;
+    text-align: center;    
+    width: 75%;
+    margin-left: 15%;
+}
+
+.ValueDisplay {
+    display:flexbox;
     text-align: center;
 }
 
-.Alignment {
-    text-align: left;
+.ArrowUp {
+    color:green;
+    float: left;
+    text-align: center;
+}
+
+.ArrowDown {
+    color:red;
+    float: left;
+}
+
+.Reason {
+    float:none;
+}
+
+.Date {
+    float: right;
 }
